2024-02-23  Bart Schaefer  <schaefer@zsh.org>

	* 52583: Src/params.c, Test/V10private.ztst: do an extra check
	for proper scope and parameter existence when assigning to a
	non-local name that resolves to a readonly special.

2024-02-22  Oliver Kiddle  <opk@zsh.org>

	* 52552: Completion/Unix/Command/_java: newer Java supports
	passing source files directly to java

2024-02-20  Bart Schaefer  <schaefer@zsh.org>

	* 52559: Doc/Zsh/builtins.yo, Doc/Zsh/mod_private.yo,
	Src/Modules/param_private.c, Src/params.c, Test/B02typeset.ztst,
	Test/K01nameref.ztst, Test/V10private.ztst: revise "typeset -p"
	with respect to local readonly special parameters; update doc
	and tests to describe handling of global readonly specials and
	to account for side-effects on zsh/param/private.

2024-02-19  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 52549: Doc/Zsh/builtins.yo: document that return already works
	in a script.

x2024-02-19  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52544: Completion/Unix/Type/_diff_options: support macOS Ventura
	or newer

2024-02-18  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 52558: Etc/FAQ.yo: make note of word splitting differences
	with nofork substitutions; update ToC; minor formatting fixes

2024-02-18  Stephane Chazelas  <stephane@chazelas.org>

	* 45837: Src/exec.c, Src/init.c, Src/options.c: fix issue whereby
	original process group is not restored properly upon exit when
	exec {var} redirs are used or MONITOR is temporarily disabled.

2024-02-18  Stephane Chazelas  <stephane@chazelas.org>

	* 52515: Src/exec.c (+ tests in 52527) avoid sh errors when
	  running shebang-less scripts with paths starting with - or +

2024-02-17  Bart Schaefer  <schaefer@zsh.org>

	* 52556: Test/K01nameref.ztst: regression test for unset referent

	* 52556: Src/builtin.c: fix crash when applying a type change via
	a named reference when the referent has been declared but unset

2024-02-16  Mikael Magnusson  <mikachu@gmail.com>
